--- a/src/style.css
+++ b/src/style.css
@@ -322,3 +322,394 @@ span {
         background-repeat: no-repeat;
     }
 }
+
+
+
+/*first page styling*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html, body {
+    width: 100vw;
+    height: 100vh;
+    
+    overflow: hidden;
+    
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), 
+                linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), 
+                #252525;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
+  }
+  /*layout for page*/
+  .container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+                        "mode search ."
+                        "navigation-tab current-weather extra-weather"
+                        "navigation-tab daily-weather hourly-weather ";
+   
+    height: 100vh;
+    gap: 0.5rem;
+    
+  
+  }
+  
+  
+  #search{
+    grid-area: search;
+    width: 31.1875rem;
+    height: 3.75rem;
+    border-radius: 2.5rem;
+    background-color: #323232;
+    box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.1);
+    color: rgba(209, 209, 209, 0.60);
+    font-family: Inter;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    display: flex;
+    align-items: center;
+    padding: 0 1 rem;
+    margin: 3rem;
+    
+    
+  }
+  
+  #search input {
+    flex: 1;
+    color: white;
+    
+    height: 2rem;
+    border: none;
+    outline: none;
+    padding: 0 1rem;
+    font-size: 1rem;
+    border-radius: 2rem;
+    background: transparent;
+  }
+  
+  #search button{
+    width: 2rem; 
+    height: 2rem;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    margin-right: 0.5rem;
+    
+  }
+  #search button hover{
+    transform: scale(1.1);
+    background: transparent;
+    filter: invert(70%);
+  }
+  /*layout for navigation bar*/
+  .navigation-tab{
+    display: grid;
+    grid-area: navigation-tab;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6,1fr);
+    grid-template-areas: 'home'
+                          'weather'
+                          'route'
+                          'analysis'
+                          'settings'
+                          'calendar'
+                          ;
+                        
+    width: 5.25rem;
+    height: 34.5625rem;
+    flex-shrink: 0;
+    background-color: #333;
+    border-radius: 3rem;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    margin-left: 2rem;
+    margin-top: 0rem;
+    
+    gap: 1rem;
+    place-items: center;
+  }
+  #route{
+    grid-area: route;
+    width: 2.5rem;
+    height: 2.2rem;
+    flex-shrink: 0;
+    margin-bottom: 2rem;
+    fill: #D9D9D9;
+  }
+  .navigation-tab p{
+    color: #D9D9D9;
+    font-size: 0.9rem;
+  }
+  .navigation-tab button{
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    
+  }
+  .navigation-tab a{
+    text-decoration-line: none;
+  }
+  #analysis{
+    grid-area: analysis;
+    width: 2.6875rem;
+    height: 2.6875rem;
+    flex-shrink: 0;
+    
+  }
+  #settings{
+    grid-area: settings;
+    width: 2.875rem;
+    height: 2.75rem;
+    flex-shrink: 0;
+    
+  
+  }
+  #calendar{
+    grid-area: calendar;
+    width: 2.8125rem;
+    height: 2.8125rem;
+    flex-shrink: 0;
+    
+    
+  }
+  #home{
+    margin-top: 1rem;
+    grid-area: home;
+    width: 2.45575rem;
+    height: 2.18881rem;
+    flex-shrink: 0;
+    
+    
+  }
+  
+  #weather{
+    
+    grid-area: weather;
+    width: 2.45575rem;
+    height: 2.18881rem;
+    flex-shrink: 0;
+    
+  }
+  .navigation-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 2rem;
+  }
+  
+  /*dark/light mode switch*/
+  #mode{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0.5rem;
+    grid-area: mode;
+    width: 4.8125rem;
+    height: 1.8125rem;
+    flex-shrink: 0;
+    fill: #D9D9D9;
+  }
+  #mode p{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 0.1rem;
+    margin-left: 1rem;
+  }
+  .switch-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.3rem;
+    position: relative;
+    display: inline-block;
+    width: 3.1275rem;  
+    height: 4rem;
+    padding: 0.05rem;
+    margin: 0.2rem
+  }
+  .switch-container input { 
+    opacity: 0;
+    width: 0;
+    height: 1rem;
+  }
+  .slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 4.8125rem;
+    height: 1.8125rem;
+    background-color: #ccc;
+    border-radius: 2.125rem;
+    transition: 0.4s;
+    padding: 1rem;
+  }
+  .slider:before {
+    content: "";
+    position: absolute;
+    width: 1.5rem;  
+    height: 1.5rem; 
+    left: 0.1875rem;
+    margin: 0.1rem;
+    bottom: 0.1875rem;
+    background-color: #333333;
+    border-radius: 50%;
+    transition: 0.4s;
+  }
+   input:checked + .slider {
+    background-color: #dce8f2; 
+  } 
+  
+   input:checked + .slider:before {
+    transform: translateX(2.7rem); 
+  }  
+  
+  /*displays current weather*/
+  .current-weather{ 
+    grid-area: current-weather;
+    width: 33.8125rem;
+    height: 23.78125rem;
+    flex-shrink: 0;
+    fill:hsla(299, 36%, 46%, 1);
+    color: #FFF;
+    font-family: Inter;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    
+  }
+  
+  
+  /*displays the secondary feature on the first page*/
+   .extra-weather{
+    grid-area: extra-weather;
+    margin-top: -7rem;
+    margin-left: 1rem;
+    padding-right: 2rem; 
+    
+  
+  }
+  
+  /*style size hourly weather*/
+  .hourly-weather{
+    grid-area: hourly-weather;
+    margin-left: 3rem;
+    margin-top: -8rem;
+  }
+  
+  /*style for daily weather*/
+  .daily-weather{
+    grid-area: daily-weather;
+    display: grid;
+    overflow: visible;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 'day1 day2 day3 day4';
+    gap: 2rem;
+    flex-shrink: 0;
+    align-content: center;
+    justify-content: center;
+  
+  } 
+  
+  #day1{
+    grid-area: day1;
+    
+  }
+  #day2{
+    grid-area: day2;
+   
+  }
+  #day3{
+    grid-area: day3;
+    
+  }
+  #day4{
+    grid-area: day4;
+   
+  } 
+  
+  .daily-weather-card{
+    width: 7rem;
+    height: 12.25rem;
+    flex-shrink: 0;
+    position: relative;
+    margin: 0.5rem;
+    background-color: #333333;
+    border-radius: 3.75rem;
+    box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column; 
+    flex-wrap: nowrap;
+    align-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
+    
+  }
+  .daily-weather-card:nth-child(1){
+    background-color: hsla(299, 36%, 46%, 1);
+  }
+  
+  
+  
+  .daily-weather-icon{
+    margin-bottom: 2rem;
+    width: 3rem;
+    height: 3rem;
+  
+  }
+  
+  
+  
+   .temp {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+    
+  }
+  .date{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+    margin-top: 1.5rem;
+  
+  }
+  .daily-weather-description{
+    font-size: 0.9rem;
+    text-align: center;
+    color: #ffffff; 
+    margin-top: -2rem;
+  }
+  
+  
+  
+  
+   
+  
+   
+  
+  
+  
+  
