--- a/src/style.css
+++ b/src/style.css
@@ -336,7 +336,7 @@ span {
     width: 100vw;
     height: 100vh;
     
-    overflow: hidden;
+    overflow: visible;
     
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), 
                 linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), 
