--- a/src/SecondaryInfo.css
+++ b/src/SecondaryInfo.css
@@ -449,9 +449,9 @@
   
   .secondary-box .secondary-woman-biking-medium {
     height: 2.9rem;
-    left: 0;
+    left: 5rem;
     position: absolute;
-    top: 3.7rem;
+    top: 3rem;
     width: 2.9rem;
   }
   
