--- a/src/style.css
+++ b/src/style.css
@@ -330,13 +330,13 @@ span {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
   }
   
-  html, body {
+  body {
     width: 100vw;
     height: 100vh;
-    
-    overflow: visible;
+    border: none;
     
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), 
                 linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), 
@@ -452,6 +452,13 @@ span {
     cursor: pointer;
     
   }
+  .navigation-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 2rem;
+  }
   .navigation-tab a{
     text-decoration-line: none;
   }
@@ -481,11 +488,16 @@ span {
   #home{
     margin-top: 1rem;
     grid-area: home;
-    width: 2.45575rem;
-    height: 2.18881rem;
+    width: 2rem;
+    height: 2rem;
     flex-shrink: 0;
     
     
+  }
+  #home img{
+    width: 2.575rem;
+    height: 2.58rem;
+    flex-shrink: 0;
   }
   
   #weather{
@@ -496,16 +508,10 @@ span {
     flex-shrink: 0;
     
   }
-  .navigation-item{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-    margin-bottom: 2rem;
-  }
+ 
   
   /*dark/light mode switch*/
-  #mode{
+  .mode{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -517,7 +523,7 @@ span {
     flex-shrink: 0;
     fill: #D9D9D9;
   }
-  #mode p{
+  .mode p{
     color: #FFF;
     font-family: Inter;
     font-size: 0.75rem;
@@ -590,6 +596,7 @@ span {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    
     
   }
   
@@ -706,10 +713,301 @@ span {
   
   
   
+ 
+  
+  
    
   
+  
+  /*light modes*/
+ body.light {
+  background: #F5F4F4;
+  box-shadow: none;
+  border: none;
+
+}
+.light .drops img{
+  margin-bottom: 1.2rem;
+}
+
+
+.light #search{
+  border-radius: 2.5rem;
+  background: #A29898;
+  box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.25);
+}
+
+
+.light .current-weather{
+  border-radius: 1rem;
+  display: inline-block;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+}
+
+.light .weather-card{
+  background: #A29898;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  padding: 1rem;
+  
+  border-radius: 2rem;
+  
+  
+
+}
+
+
+.light .secondary-box .secondary-overlap {
+  background-color: #A29898;
+  border-radius: 2.75rem;
+  box-shadow: 0 0.125rem 2.5rem rgba(0, 0, 0, 0.25);
+  height: 20rem;
+  position: relative;
+  width: 40rem;
+}
+
+.light .hourly-weather{
+  fill: #A29898;
+  filter: drop-shadow(0px 2px 50px rgba(0, 0, 0, 0.25));
+}
+
+.light .navigation-tab{
+  background-color: #A29898;
+  filter: drop-shadow(0px 2px 50px rgba(0, 0, 0, 0.25));
+}
+
+.light .box .overlap-group{
+  background: #A29898;
+}
+
+.light .daily-weather-card{
+  background-color: #A29898
+}
+
+.daily-weather-card:nth-child(1){
+  background-color: hsla(299, 36%, 46%, 1);
+}
+
+
+
+
+/* Mobile Large */
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-areas: 
+      "mode search"
+      "navigation-tab navigation-tab"
+      "current-weather current-weather"
+      "extra-weather extra-weather"
+      "daily-weather daily-weather"
+      "hourly-weather hourly-weather";
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
+    gap: 3rem;
+    height: auto;
+    transform: scale(0.95);
+  }
+  .navigation-item{
+    transform: scale(0.9);
+    
+  }
+  .navigation-tab {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr;
+    grid-template-areas: 'home weather route analysis settings calendar';
+    max-height: 5.25rem;
+    max-width: 38rem;
+    width: auto;
+    margin-left: 2.5rem;
+    margin-top: -2rem;
+    transform: scale(0.96);
+    
+    
+  }
+  
+  
+  .current-weather{
+    margin-left: 2rem;
+    
+  }
+  #search {
+    margin-left: 1.5rem;
+    margin-top: -2rem;
+    
+    
+    
+  }
+  .mode{
+    margin-left: -1.5rem;
+    transform: scale(0.9);
+    margin-top: -2rem;
+  }
+  
+  .daily-weather {
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    grid-template-areas: 'day1 day2 day3 day4';
+    gap: 1rem;
+    /* margin: 1rem auto; */
+    margin-left: -3rem;
+    width: 100%;
+    
+  }
+  .daily-weather-card{
+    width: 80%;
+    max-width: 7rem;
+    margin-left: 5rem;
+    gap: 0rem;
+    padding: 1rem;
    
+  }
+
   
+  .secondary-box,
+  .secondary-box .secondary-info,
+  .secondary-box .secondary-overlap {
+    width: auto;
+    max-width: 48.5rem;
+    height: auto;
+    min-height: 20rem;
+    margin-left: 1rem;
+    margin-top: -2rem;
+    transform: scale(1);
+    
+  }
   
+  .secondary-box .secondary-text-wrapper {
+    font-size: 3rem;
+    left: 1rem;
+    
+  }
   
+  /* Repositioning elements for smaller screens */
+  .secondary-box .secondary-humidity,
+  .secondary-box .wind-speed,
+  .secondary-box .secondary-percipitation,
+  .secondary-box .secondary-pressure,
+  .secondary-box .secondary-visibility,
+  .secondary-box .secondary-UV {
+    position: relative;
+    left: auto;
+    top: auto;
+    margin: 0.5rem;
+   
+    display: inline-block;
+  }
   
+  .extra-weather {
+    margin: 1rem 0;
+    margin-left: -1.5rem;
+    padding-right: 0;
+    transform: scale(0.95);
+  }
+  
+  .hourly-weather {
+    margin-left: 4rem;
+    margin-top: 0rem;
+  }
+  
+}
+
+/* Mobile Small */
+@media screen and (max-width: 480px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+      "mode search"
+    
+      "navigation-tab"
+      "current-weather"
+      "extra-weather"
+      "daily-weather"
+      "hourly-weather";
+    padding: 0 0.25rem;
+    /* transform: scale(0.96); */
+    margin-left: 4rem;
+    gap: 3rem;
+  }
+  
+  .navigation-tab {
+    
+    max-width: 50rem;
+    max-height: 5rem;
+    margin-left: 1rem;
+    
+  }
+  
+  #route, #analysis, #settings, #calendar, #home, #weather {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  
+  .navigation-tab p {
+    font-size: 0.7rem;
+  }
+  
+  #search {
+    
+    border-radius: 1.5rem;
+    font-size: 0.9rem;
+    margin-left: 1rem;
+    margin-top: -1rem;
+  }
+  
+  .daily-weather {
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    grid-template-areas: 'day1 day2 day3 day4';
+    margin-left: 3rem;
+    transform: scale(0.8);
+  }
+  
+  .daily-weather-card {
+    width: 100%;
+    max-width: 7rem;
+   
+    margin: 0rem -3.5rem;
+    gap: 0rem;
+    padding: 0rem;
+    
+  }
+  
+  .secondary-box .secondary-text-wrapper {
+    font-size: 2.5rem;
+  }
+  
+  .secondary-box .sunrise,
+  .secondary-box .sunset {
+    position: relative;
+    left: auto;
+    top: auto;
+    margin: 0.5rem;
+    display: block;
+  }
+  .secondary-box{
+    margin-left: 4rem;
+    transform: scale(1.1);
+    margin-top: 2rem;
+  }
+  
+  .current-weather{
+    margin-left: 5rem;
+  }
+  .hourly-weather{
+    margin-left: 7rem;
+  }
+}
+.current-weather-icon{
+  width: 8rem;
+  height: 8rem;
+  margin-top: -2rem;
+  margin-left: -1rem;
+  margin-bottom: 0.5rem;
+  
+
+}
+.secondary-weather-icon {
+  max-width: 8rem;
+  max-height: 8rem;
+  margin-left: 4rem;
+  margin-bottom: 1rem;
+  
+}
