--- a/src/style.css
+++ b/src/style.css
@@ -2,20 +2,29 @@
 /* BACKGROUND STYLING */
 
 body {
-    background-color: #252525;
     font-family: 'Inter', sans-serif;
     overflow-x: hidden;
+}
+
+/* DARK AND LIGHT THEME BODY */
+
+body[colour-mode="dark"] {
+    background-color: #252525;
+}
+
+body[colour-mode="light"] {
+    background-color: #F5F4F4;
 }
 
 /* GRID SECTIONS */
 
 #content {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr;
     grid-gap: 1rem;
     grid-template-areas:
-    "warnings warnings warnings warnings"
-    "repair ai temp .";
+    "navbar warnings warnings warnings warnings"
+    "navbar repair ai temp .";
     margin-left: auto;
     margin-right: auto;
     transform: scale(min(100vw / 1200, 100vh / 800));
@@ -26,11 +35,18 @@ hr {
     border: 0;
     height: 1px;
     background: #333;
-    background-image: linear-gradient(to right, #333, #ccc, #333);
     width: 80%;
     position: absolute;
     top: 100px;
     left: 60px;
+}
+
+body[colour-mode="dark"] hr {
+    background-image: linear-gradient(to right, #333, #ccc, #333);
+}
+
+body[colour-mode="light"] hr {
+    background-image: linear-gradient(to right, #ccc, #fff, #ccc);
 }
 
 /* TITLE */
@@ -45,28 +61,17 @@ hr {
     font-family: 'Roboto', sans-serif;
 }
 
-#warnings button, #backButton {
+#warnings button {
     background-color: #9E4A9F;
     border-radius: 6.25rem;
     border: none;
     color: #fff;
-    transition: filter 0.3s ease-in-out;
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-}
-
-#warnings button {
     top: 360px;
     left: 1150px;
     padding: 0.625rem 1.5rem;
 }
 
-#backButton {
-    top: 20px;
-    left: 20px;
-    padding: 0.25rem 1rem;
-}
-
-#warnings button:hover, #backButton:hover {
+#warnings button:hover {
     background-color: #7D3A7D;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
     cursor: pointer;
@@ -77,7 +82,7 @@ hr {
     position: absolute;
     width: 100%;
     top: 250px;
-    left: 60px;
+    left: 180px;
     gap: 1rem;
 }
 
@@ -88,6 +93,7 @@ hr {
 
 #warning-data .text-panel {
     height: 50px;
+    min-width: 40%;
 }
 
 .warning-data-figures {
@@ -109,7 +115,13 @@ h1 {
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     position: absolute;
     top: 20px;
-    left: 100px;
+    left: 250px;
+}
+
+/* LIGHT THEME HEADING 1 STYLE */
+
+body[colour-mode="light"] h1 {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 h2 {
@@ -120,13 +132,123 @@ h2 {
     color: #d1d1d1;
 }
 
+/* NAVIGATION BAR */
+
+.navigation-tab{
+    display: grid;
+    grid-area: navbar;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6,1fr);
+    grid-template-areas: 'home'
+                          'weather'
+                          'route'
+                          'analysis'
+                          'calendar'
+                          'settings'
+                          ;
+                        
+    width: 5.25rem;
+    height: 36.5625rem;
+    flex-shrink: 0;
+    background-color: #333;
+    border-radius: 3rem;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
+    margin-left: 2rem;
+    margin-top: 0rem;
+    gap: 1rem;
+    align-self: center;
+    place-items: center;
+}
+
+#route{
+    grid-area: route;
+    width: 2.5rem;
+    height: 2.2rem;
+    flex-shrink: 0;
+    margin-bottom: 2rem;
+    fill: #D9D9D9;
+}
+
+.navigation-tab p{
+    color: #D9D9D9;
+    font-size: 0.9rem;
+}
+
+.navigation-tab button{
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.navigation-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 2rem;
+}
+
+.navigation-tab a{
+    text-decoration-line: none;
+}
+
+#analysis{
+    grid-area: analysis;
+    width: 2.6875rem;
+    height: 2.6875rem;
+    flex-shrink: 0;
+}
+
+#settings{
+    grid-area: settings;
+    width: 2.875rem;
+    height: 2.75rem;
+    flex-shrink: 0;
+    padding-bottom: 1rem;
+}
+
+#calendar{
+    grid-area: calendar;
+    width: 2.8125rem;
+    height: 2.8125rem;
+    flex-shrink: 0;
+}
+
+#home{
+    margin-top: 1rem;
+    grid-area: home;
+    width: 2rem;
+    height: 2rem;
+    flex-shrink: 0;
+}
+
+#home img{
+    width: 2.575rem;
+    height: 2.58rem;
+    flex-shrink: 0;
+}
+  
+#weather{
+    grid-area: weather;
+    width: 2.45575rem;
+    height: 2.18881rem;
+    flex-shrink: 0;
+}
+
 /* UTILITY SECTIONS */
 
 .utility {
     width: 405px;
     height: 500px;
     border-radius: 60px;
+}
+
+body[colour-mode="dark"] .utility {
     background-image: url("images/utility_rect.png");
+}
+
+body[colour-mode="light"] .utility {
+    background-image: url("images/utility_rect_light.png");
 }
 
 #repair {
@@ -153,8 +275,17 @@ h2 {
     top: 140px;
     left: 180px;
     border-radius: 60px;
-    background-image: url("images/repair_search_rect.png");
     z-index: 2;
+}
+
+/* DARK AND LIGHT THEME REPAIR SEARCHBAR */
+
+body[colour-mode="dark"] #repair-search {
+    background-image: url("images/repair_search_rect.png");
+}
+
+body[colour-mode="light"] #repair-search {
+    background-image: url("images/repair_search_light.png");
 }
 
 input {
@@ -165,7 +296,16 @@ input {
     vertical-align: middle;
     margin: 0.5rem;
     padding: 0.5rem;
+}
+
+/* DARK AND LIGHT THEME INPUT FIELDS */
+
+body[colour-mode="dark"] input {
     color: #d1d1d1;
+}
+
+body[colour-mode="light"] input {
+    color: #333333;
 }
 
 .image-panel {
@@ -179,8 +319,17 @@ input {
     height: 255px;
     top: 180px;
     left: 50px;
-    border-radius: 30px;    
+    border-radius: 30px;
+}
+
+/* DARK AND LIGHT THEME REPAIR PANEL */
+
+body[colour-mode="dark"] #repair-panel {
     background-image: url("images/repair_rect.svg");
+}
+
+body[colour-mode="light"] #repair-panel {
+    background-image: url("images/repair_rect_light.png");
 }
 
 #repair img {
@@ -191,9 +340,18 @@ input {
 
 #repair h3 {
     position: absolute;
-    color: #d1d1d1;
     top: 50px;
     left: 65px;
+}
+
+/* DARK AND LIGHT THEME HEADING 3 STYLE */
+
+body[colour-mode="dark"] #repair h3 {
+    color: #d1d1d1;
+}
+
+body[colour-mode="light"] #repair h3 {
+    color: #333333;
 }
 
 .custom-bullets {
@@ -202,14 +360,29 @@ input {
     left: 60px;
     list-style-type: none;
     padding-left: 15px;
+}
+
+/* DARK AND LIGHT THEME REPAIR SHOPS LIST */
+
+body[colour-mode="dark"] .custom-bullets {
     color: #d1d1d1;
+}
+
+body[colour-mode="light"] .custom-bullets {
+    color: #333333;
+}
+
+.custom-bullets li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 5px;
 }
 
 .custom-bullets li::before {
     content: "•";
     color: #9E4A9F;
     font-size: 30px;
-    margin-right: 10px;
 }
 
 
@@ -226,7 +399,27 @@ input {
     top: 400px;
     left: 55px;
     border-radius: 60px;    
+}
+
+/* DARK AND LIGHT THEME AI SEARCHBAR */
+
+body[colour-mode="dark"] #ai-search {
     background-image: url("images/ai_search_rect.png");
+}
+
+body[colour-mode="light"] #ai-search {
+    background-image: url("images/ai_search_light.png");
+}
+
+/* DARK AND LIGHT THEME SEARCH ICON */
+
+body[colour-mode="dark"] .search-icon {
+    content: url("images/search_icon.png");
+}
+
+/* Light Mode */
+body[colour-mode="light"] .search-icon {
+    content: url("images/search_icon_light.png");
 }
 
 #ai img {
@@ -246,7 +439,16 @@ input {
     height: 200px;
     margin: 10px;
     padding: 10px;
+}
+
+/* DARK AND LIGHT THEME TEXT PANEL AND HEADING 2 */
+
+body[colour-mode="dark"] .text-panel, body[colour-mode="dark"] h2, body[colour-mode="dark"] p {
     color: #d1d1d1;
+}
+
+body[colour-mode="light"] .text-panel, body[colour-mode="light"] h2, body[colour-mode="light"] p {
+    color: #ffffff;
 }
 
 span {
@@ -260,9 +462,11 @@ span {
     width: 300px;
     height: 500px;
     top: 550px;
-    left: 1280px;
+    left: 1300px;
     background-image: url("images/temp_icon.png");
     background-repeat: no-repeat;
+    transform: scale(0.8);
+    z-index: -1;
 }
 
 /* TODAY'S TEMPERATURE PANEL */
@@ -284,8 +488,54 @@ span {
     top: 150px;
     left: 80px;
     font-size: 1.5rem;
-    color: #d1d1d1;
 }
+
+/* TOGGLE BUTTON FOR THEME SWITCHING */
+
+.switch {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display: inline-block;
+    width: 50px;
+    height: 25px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    inset: 0;
+    background-color: #fff;
+    transition: 0.4s;
+    border-radius: 25px;
+}
+
+.slider::before {
+    content: "";
+    position: absolute;
+    height: 18px;
+    width: 18px;
+    right: 4px;
+    bottom: 3px;
+    background-color: #333;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #A29898;
+}
+
+input:checked + .slider::before {
+    transform: translateX(-24px);
+}
+
 
 /* RESPONSIVE STYLING */
 
@@ -331,31 +581,41 @@ span {
     }
 
     #content {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr;
         grid-gap: 0;
         grid-template-areas:
-        "warnings"
-        "repair"
-        "ai"
-        "temp";
+        "mode navbar"
+        "warnings warnings"
+        "repair repair"
+        "ai ai"
+        "temp temp";
         transform: scale(0.8) translate(6%, 0);
         max-height: 100vh;
     }
 
     #warnings {
-        background-image: url("images/utility_rect.png");
         width: 405px;
         height: 500px;
         border-radius: 60px;
     }
 
+    body[colour-mode="dark"] #warnings {
+        background-image: url("images/utility_rect.png");
+    }
+
+    body[colour-mode="light"] #warnings {
+        background-image: url("images/utility_rect_light.png");
+    }
+
     #warning-data {
         flex-wrap: wrap;
         width: 100%;
-        top: 160px;
+        top: 220px;
         left: 80px;
         font-size: 0.6rem;
-        gap: 0;
+        gap: 0.5rem;
+        column-gap: 1rem;
     }
 
     .warning-data-figures {
@@ -377,9 +637,17 @@ span {
 
 
     h1 {
+        display: flex;
+        flex-wrap: wrap;
         font-size: 2.5rem;
-        top: 50px;
+        top: 120px;
         left: 130px;
+    }
+
+    .switch {
+        grid-area: mode;
+        top: unset;
+        left: unset;
     }
 
     #temp-icon {
@@ -447,8 +715,6 @@ body {
   align-items: center;
   padding: 0 1 rem;
   margin: 3rem;
-  
-  
 }
 
 #search input {
@@ -1080,4 +1346,38 @@ body.light {
   margin-left: 4rem;
   margin-bottom: 1rem;
 
+
+    .navigation-tab {
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-areas: 'home weather route analysis calendar settings';
+        max-width: 50rem;
+        max-height: 5rem;
+        margin-left: 1rem;
+        width: auto;
+        transform: scale(0.96) translate(10%, 0);
+        gap: 2rem;
+    }
+      
+    #route, #analysis, #settings, #calendar, #home, #weather {
+        width: 1.8rem;
+        height: 1.8rem;
+        transform: scale(0.8);
+    }
+
+    #home {
+        margin-left: 1rem;
+    }
+
+    #settings {
+        margin-right: 1rem;
+    }
+      
+    .navigation-tab p {
+        font-size: 0.7rem;
+        margin: 0;
+        text-align: center;
+        vertical-align: middle;
+    }
 }
