--- a/src/style.css
+++ b/src/style.css
@@ -23,12 +23,12 @@ body[colour-mode="light"] {
     grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr;
     grid-gap: 1rem;
     grid-template-areas:
-    "navbar warnings warnings warnings warnings"
-    "navbar repair ai temp .";
+    "mode warnings warnings warnings warnings"
+    "navigation-tab warnings warnings warnings warnings"
+    "navigation-tab repair ai temp .";
     margin-left: auto;
     margin-right: auto;
     transform: scale(min(100vw / 1200, 100vh / 800));
-
 }
 
 hr {
@@ -69,6 +69,8 @@ body[colour-mode="light"] hr {
     top: 360px;
     left: 1150px;
     padding: 0.625rem 1.5rem;
+    transition: filter 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 #warnings button:hover {
@@ -114,7 +116,7 @@ h1 {
     -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     position: absolute;
-    top: 20px;
+    top: 60px;
     left: 250px;
 }
 
@@ -127,7 +129,7 @@ body[colour-mode="light"] h1 {
 h2 {
     font-weight: 700;
     position: absolute;
-    top: 50px;
+    top: 70px;
     left: 160px;
     color: #d1d1d1;
 }
@@ -136,7 +138,7 @@ h2 {
 
 .navigation-tab{
     display: grid;
-    grid-area: navbar;
+    grid-area: navigation-tab;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6,1fr);
     grid-template-areas: 'home'
@@ -340,7 +342,7 @@ body[colour-mode="light"] #repair-panel {
 
 #repair h3 {
     position: absolute;
-    top: 50px;
+    top: 65px;
     left: 65px;
 }
 
@@ -356,7 +358,7 @@ body[colour-mode="light"] #repair h3 {
 
 .custom-bullets {
     position: absolute;
-    top: 80px;
+    top: 90px;
     left: 60px;
     list-style-type: none;
     padding-left: 15px;
@@ -476,7 +478,7 @@ span {
 }
 
 #temp h1 {
-    top: 60px;
+    top: 120px;
     left: 80px;
     font-size: 7rem;
     color: #9E4A9F;
@@ -489,53 +491,6 @@ span {
     left: 80px;
     font-size: 1.5rem;
 }
-
-/* TOGGLE BUTTON FOR THEME SWITCHING */
-
-.switch {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    display: inline-block;
-    width: 50px;
-    height: 25px;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    inset: 0;
-    background-color: #fff;
-    transition: 0.4s;
-    border-radius: 25px;
-}
-
-.slider::before {
-    content: "";
-    position: absolute;
-    height: 18px;
-    width: 18px;
-    right: 4px;
-    bottom: 3px;
-    background-color: #333;
-    transition: 0.4s;
-    border-radius: 50%;
-}
-
-input:checked + .slider {
-    background-color: #A29898;
-}
-
-input:checked + .slider::before {
-    transform: translateX(-24px);
-}
-
 
 /* RESPONSIVE STYLING */
 
@@ -558,8 +513,11 @@ input:checked + .slider::before {
         transform: scale(0.5);
         transform-origin: top left;
     }
-}
 
+    #warning-data {
+        width: 125%;
+    }
+}
 
 @media (max-width: 900px) {
     #content {
@@ -585,7 +543,7 @@ input:checked + .slider::before {
         grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr;
         grid-gap: 0;
         grid-template-areas:
-        "mode navbar"
+        "mode navigation-tab"
         "warnings warnings"
         "repair repair"
         "ai ai"
@@ -635,7 +593,6 @@ input:checked + .slider::before {
         display: none;
     }
 
-
     h1 {
         display: flex;
         flex-wrap: wrap;
@@ -658,9 +615,10 @@ input:checked + .slider::before {
         left: 120px;
         background-image: url("images/temp_icon.png");
         background-repeat: no-repeat;
+        transform: scale(0.8);
+        z-index: -1;
     }
        
-    
 }
 
 /*first page styling*/
@@ -668,7 +626,6 @@ input:checked + .slider::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 body {
