--- a/src/style.css
+++ b/src/style.css
@@ -762,6 +762,15 @@ body {
   margin-left: 1rem;
 }
 
+/* DARK AND LIGHT THEME FOR MODE TEXT */
+
+body[colour-mode="dark"] .mode p{
+  color: #FFF;
+}
+body[colour-mode="light"] .mode p{
+  color: #333;
+}
+
 .switch-container {
   display: flex;
   flex-direction: column;
